--- a/src/components/Activities.css
+++ b/src/components/Activities.css
@@ -1,33 +1,58 @@
+/* src/pages/Activities.css */
+
 .activities-page {
+  font-family: 'Kanit', sans-serif;
+}
+
+.activities-content {
+  text-align: center;
+  margin-top: 100px;
+  padding: 20px; /* Ensure padding around content */
+}
+
+.activities-content h1 {
+  font-size: 2.5rem;
+  color: #094709;
+}
+
+.activities-content p {
+  font-size: 1.2rem;
+  color: #333;
+}
+
+/* Responsive adjustments for different screen sizes */
+
+/* For large desktops */
+@media (min-width: 1200px) {
+  .activities-content h1 {
+    font-size: 36px; /* Slightly larger font for large screens */
+    margin-top: 30px; /* เพิ่มระยะห่างด้านบน */
+    margin-bottom: 30px; /* เพิ่มระยะห่างด้านล่าง */
+  }
+
+  .activities-content {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    font-family: 'Kanit', sans-serif;
+    padding-left: 200px;
+    padding-right: 200px;
   }
-  
-  .activities-content {
-    flex: 1;
-    text-align: center;
-    margin: 100px; /* Adjust as needed */
-    padding-top: 10px;
-    padding-left: 110px;
-    padding-right: 110px;
-    padding-bottom: 110px;
-  }
-  
+}
+
+/* For tablets and smaller desktops */
+@media (max-width: 1199px) and (min-width: 768px) {
   .activities-content h1 {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 2.5rem;
-    color: #094709;
+    font-size: 32px; /* Default font size for tablets and smaller desktops */
   }
-  
-  .activities-content p {
-    font-size: 1.2rem;
-    color: #333;
+}
+
+/* For mobile screens */
+@media (max-width: 767px) {
+    .activities-content{
+        margin-top: 60px;
+    }
+  .activities-content h1 {
+    font-size: 28px; /* Smaller font size for mobile screens */
+    margin-bottom: 15px; /* Adjust margin for mobile screens */
   }
-  
-  /* Ensure the footer stays at the bottom */
-  footer {
-    margin-top: auto; /* Pushes footer to the bottom */
-  }
+}
